# taskflow

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
md/: d.md  homeview.md
src/: App.css  App.tsx  main.tsx  router.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250413111216_create_history_table.sql
src-tauri/resources/eyeDetection/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-eyeDetection.txt  xref-eyeDetection.html
src-tauri/src/: error.rs  main.rs
src-tauri/src-tauri/data/: history.db
src-tauri/src-tauri/llm/: mod.rs
src-tauri/src/commands/: db_core.rs  do_python.rs  exports_users.rs  file_operations.rs  llm_memo.rs  mod.rs  preview.rs  sql_concept.rs  sql_memo.rs  user.rs  view_schedule_window.rs  window_manager.rs
src-tauri/src/commands/concept/: add_concept.rs  add_concept_process_factor.rs  add_concept_relation.rs  add_concept_to_note.rs  add_note_concept.rs  list_concepts.rs  mod.rs
src-tauri/src/commands/firestore/: andoroid_list_note.rs  andoroid_notes.rs  andoroid_update_note.rs  google_credentials.rs  mod.rs
src-tauri/src/commands/llm_memo/: update_llm_memo.rs
src-tauri/src/commands/schedule/: add_schedule.rs  add_schedule_task.rs  delete_schedule.rs  get_schedule.rs  list_schedule_task.rs  mod.rs  sql_schedule.rs  update_list_schedule_task.rs  update_schedule.rs  update_schedule_task.rs
src-tauri/src/commands/search/: mod.rs  note_concepts.rs
src-tauri/src/commands/search_memo/: add_search_memo.rs  delete_search_memo.rs  get_search_memo.rs  list_search_memo.rs  mod.rs
src-tauri/src/data_collection/: app_history.rs  browser_history.rs  mod.rs  system_logs.rs
src-tauri/src/database/: mod.rs
src-tauri/src/db/: db_stats.rs  init_db.rs  mod.rs
src-tauri/src/migrations/: mod.rs  run_migrations.rs  v2.rs  v3.rs  v4.rs
src-tauri/src/models/: llmMemo.rs  mod.rs  note.rs  schedule.rs  state.rs  stats.rs  user.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/vector_store/: mod.rs
src-tauri/src/window_capture/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AndroidMemoList.tsx  CommonModal.tsx  ConnectLinker.tsx  DashBord.tsx  DbInspector.tsx  ErrorBoundary.tsx  Footer.tsx  Guidelines.tsx  Header.tsx  MemoMakerSidebar.tsx  ScheduleDetail.tsx  ScheduleForm.tsx  ScheduleList.tsx  Scheduler.tsx  SearchImages.tsx  SearchMemo.tsx  ViewCard.tsx  VirtualDesktopView.tsx  VirtualDesktopViewService.ts
src/components/core/: CoreDialog.tsx  Dialog.tsx  Header.tsx  Modal.tsx
src/components/modifier/: AndroidMemoDialog.tsx  HoverFollow.tsx  ImageDialog.tsx  (+13 more)
src/hooks/: useConceptSearch.ts  useRouterActions.ts  useSchedlueWindowSync.ts  useWindowSync.ts
src/json/: erp.json  path.json
src/models/: ConceptView.ts  LInker.ts  LlmMemo.ts  Notes.ts  RelationView.ts  Schedule.ts  User.ts
src/pages/: ConceptSearch.tsx  ConceptSearchImage.tsx  CsvMaker.tsx  Home.tsx  LlmMemo.tsx  MakerFile.tsx  MakerText.tsx  MemoLinker.tsx  MemoMaker.tsx  MemoMakerSidebar.tsx  PreviewWindow.tsx  Schedule.tsx  Structsmake.tsx  Tokenizer.tsx  UserRegister.tsx  ViewAndroidMemo.tsx  WindowChecker.tsx
src/service/: ManageWindowService.ts
src/store/: dataBox.tsx  note.tsx  ui.tsx
src/styles/: WindowVirtual.css  dialog.css  follow.css  markdown.css  modal.css  sidebar.css  virtualDesktop.css
src/utils/: dayApi.ts  inputCheckered.ts  inputSave.ts  pageRoutes.ts
src/window/: PreviewWindow.tsx  ViewScheduleWindow.tsx
(+2 files in other folders)
