[package]
name = "taskflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-write-file", "dialog-message", "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lindera-tokenizer = { version = "0.27.0", features = ["ipadic"] }
lindera-dictionary = "0.27.0"
lindera-core = "0.27.0"
lindera = "0.27.0"
genpdf = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
