[package]
name = "taskflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
rusqlite = "0.29"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lindera-tokenizer = { version = "0.27.0", features = ["ipadic"] }
lindera-dictionary = "0.27.0"
lindera-core = "0.27.0"
lindera = "0.27.0"
genpdf = "0.2"
csv = "1.4.0"
image = "0.24"
base64 = "0.21"
tauri-plugin-fs = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

